Changelog
=========

3.3 (unreleased)
----------------

- In the initial data setup, the 'thumbnail' photosizes should not increment the
  view count (issue #133).
- Fix typo in admin text (issue reported by Transifex user ciastko).
- Updated translations: Hungarian, Czech, Dutch.

3.2 (2015-05-11)
----------------

- Dropped support for Django 1.6.
- Rotation of photos based upon EXIF data if available, so they get displayed correctly (#122).
- Misc doc tweaks.
- Only clear scale cache if image has changed.
- Pagination is now hard-coded to 20 items per page - it's a convenience to have it available as
  soon as the app is run, but having settings to tweak this value is not needed as it's so
  easy to override in a Django project.
- PHOTOLOGUE_GALLERY_PAGINATE_BY and PHOTOLOGUE_PHOTO_PAGINATE_BY were previously deprecated
  and have now been removed.
- Tagging has been removed from Photologue.
- All references to 'title_slug' field have been removed.
- Django can now natively chain custom manager filters - so the dependency on django-model-utils
  is removed.
- Updated German translation.
- Improved setup file.

3.1.1 (2014-11-13)
------------------

- The 'zip upload' functionality did not work (the required html templates
  were not included into the released package).
- Updated French translation.

3.1 (2014-11-03)
----------------

- The 'zip upload' functionality has been moved to a custom admin page.
- Refactor `add_accessor_methods` to be lazily applied (see #110).
- Updated German translation.
- Several improvements to the sample Bootstrap templates.
- Support CACHEDIR.TAG spec issue #89
- Fix issue #99 by adding 10 extra char to photo title(max gallery size up to 999999999 images)
- Sitemap.xml was not aware of Sites (#104).
- In python 3, gallery upload would crash if uploaded file was not a zip file (#106).

3.0.2 (2014-09-23)
------------------

- Updated django-sortedm2m to an official release.
- Updated Spanish translation.