@@ -8,6 +8,7 @@ Changelog
   view count (issue #133).
 - Fix typo in admin text (issue reported by Transifex user ciastko).
 - Updated translations: Hungarian, Czech, Dutch.
+- Zip upload used gallery title instead of "Title" field for photos (#139).
 
 3.2 (2015-05-11)
 ----------------
